Src/Cyphoid.Core/Antlr/Generated/CypherParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Antlr/Cypher.g4 by ANTLR 4.13.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.2")]
[System.CLSCompliant(false)]
public partial class CypherParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		MATCH=1, WHERE=2, RETURN=3, LIMIT=4, AS=5, AND=6, OR=7, NOT=8, CONTAINS=9, 
		STARTS=10, ENDS=11, IN=12, WITH=13, TRUE=14, FALSE=15, NULL=16, ORDER_BY=17, 
		ASC=18, DESC=19, DISTINCT=20, ARROW_RIGHT=21, ARROW_LEFT=22, DASH=23, 
		LPAREN=24, RPAREN=25, LBRACK=26, RBRACK=27, LBRACE=28, RBRACE=29, COMMA=30, 
		COLON=31, DOT=32, PLUS=33, ASTERIX=34, SLASH=35, PERCENT=36, EQ=37, NEQ=38, 
		LTE=39, GTE=40, LT=41, GT=42, DECIMAL=43, INTEGER=44, STRING=45, IDENTIFIER=46, 
		WS=47;
	public const int
		RULE_query = 0, RULE_repeatableClause = 1, RULE_matchWhereClause = 2, 
		RULE_matchClause = 3, RULE_whereClause = 4, RULE_withClause = 5, RULE_returnLimitClause = 6, 
		RULE_returnClause = 7, RULE_orderingClause = 8, RULE_orderByItem = 9, 
		RULE_limitClause = 10, RULE_projectionList = 11, RULE_projectionItem = 12, 
		RULE_pattern = 13, RULE_patternPart = 14, RULE_patternChain = 15, RULE_nodePattern = 16, 
		RULE_relationshipPattern = 17, RULE_relationshipDetail = 18, RULE_relationshipTypes = 19, 
		RULE_nodeLabel = 20, RULE_propertyMap = 21, RULE_propertyEntry = 22, RULE_expressionList = 23, 
		RULE_expression = 24, RULE_orExpression = 25, RULE_andExpression = 26, 
		RULE_notExpression = 27, RULE_comparisonExpression = 28, RULE_comparisonOperator = 29, 
		RULE_additiveExpression = 30, RULE_multiplicativeExpression = 31, RULE_unaryExpression = 32, 
		RULE_inExpression = 33, RULE_primaryExpression = 34, RULE_propertyAccess = 35, 
		RULE_functionCall = 36, RULE_variable = 37, RULE_identifier = 38, RULE_literal = 39, 
		RULE_boolLiteral = 40, RULE_integerLiteral = 41, RULE_decimalLiteral = 42, 
		RULE_stringLiteral = 43;
	public static readonly string[] ruleNames = {
		"query", "repeatableClause", "matchWhereClause", "matchClause", "whereClause", 
		"withClause", "returnLimitClause", "returnClause", "orderingClause", "orderByItem", 
		"limitClause", "projectionList", "projectionItem", "pattern", "patternPart", 
		"patternChain", "nodePattern", "relationshipPattern", "relationshipDetail", 
		"relationshipTypes", "nodeLabel", "propertyMap", "propertyEntry", "expressionList", 
		"expression", "orExpression", "andExpression", "notExpression", "comparisonExpression", 
		"comparisonOperator", "additiveExpression", "multiplicativeExpression", 
		"unaryExpression", "inExpression", "primaryExpression", "propertyAccess", 
		"functionCall", "variable", "identifier", "literal", "boolLiteral", "integerLiteral", 
		"decimalLiteral", "stringLiteral"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, "'->'", "'<-'", 
		"'-'", "'('", "')'", "'['", "']'", "'{'", "'}'", "','", "':'", "'.'", 
		"'+'", "'*'", "'/'", "'%'", "'='", "'<>'", "'<='", "'>='", "'<'", "'>'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "MATCH", "WHERE", "RETURN", "LIMIT", "AS", "AND", "OR", "NOT", "CONTAINS", 
		"STARTS", "ENDS", "IN", "WITH", "TRUE", "FALSE", "NULL", "ORDER_BY", "ASC", 
		"DESC", "DISTINCT", "ARROW_RIGHT", "ARROW_LEFT", "DASH", "LPAREN", "RPAREN", 
		"LBRACK", "RBRACK", "LBRACE", "RBRACE", "COMMA", "COLON", "DOT", "PLUS", 
		"ASTERIX", "SLASH", "PERCENT", "EQ", "NEQ", "LTE", "GTE", "LT", "GT", 
		"DECIMAL", "INTEGER", "STRING", "IDENTIFIER", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Cypher.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static CypherParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public CypherParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public CypherParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class QueryContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ReturnLimitClauseContext returnLimitClause() {
			return GetRuleContext<ReturnLimitClauseContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(CypherParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public RepeatableClauseContext[] repeatableClause() {
			return GetRuleContexts<RepeatableClauseContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public RepeatableClauseContext repeatableClause(int i) {
			return GetRuleContext<RepeatableClauseContext>(i);
		}
		public QueryContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_query; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ICypherListener typedListener = listener as ICypherListener;
			if (typedListener != null) typedListener.EnterQuery(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ICypherListener typedListener = listener as ICypherListener;
			if (typedListener != null) typedListener.ExitQuery(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICypherVisitor<TResult> typedVisitor = visitor as ICypherVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitQuery(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public QueryContext query() {
		QueryContext _localctx = new QueryContext(Context, State);
		EnterRule(_localctx, 0, RULE_query);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 91;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==MATCH || _la==WITH) {
				{
				{
				State = 88;
				repeatableClause();
				}
				}
				State = 93;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 94;
			returnLimitClause();
			State = 95;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class RepeatableClauseContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public MatchWhereClauseContext matchWhereClause() {
			return GetRuleContext<MatchWhereClauseContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public WithClauseContext withClause() {
			return GetRuleContext<WithClauseContext>(0);
		}
		public RepeatableClauseContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_repeatableClause; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ICypherListener typedListener = listener as ICypherListener;
			if (typedListener != null) typedListener.EnterRepeatableClause(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ICypherListener typedListener = listener as ICypherListener;
			if (typedListener != null) typedListener.ExitRepeatableClause(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICypherVisitor<TResult> typedVisitor = visitor as ICypherVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRepeatableClause(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public RepeatableClauseContext repeatableClause() {
		RepeatableClauseContext _localctx = new RepeatableClauseContext(Context, State);
		EnterRule(_localctx, 2, RULE_repeatableClause);
		try {
			State = 99;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case MATCH:
				EnterOuterAlt(_localctx, 1);
				{
				State = 97;
				matchWhereClause();
				}
				break;
			case WITH:
				EnterOuterAlt(_localctx, 2);
				{
				State = 98;
				withClause();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MatchWhereClauseContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public MatchClauseContext matchClause() {
			return GetRuleContext<MatchClauseContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public WhereClauseContext whereClause() {
			return GetRuleContext<WhereClauseContext>(0);
		}
		public MatchWhereClauseContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_matchWhereClause; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ICypherListener typedListener = listener as ICypherListener;
			if (typedListener != null) typedListener.EnterMatchWhereClause(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ICypherListener typedListener = listener as ICypherListener;
			if (typedListener != null) typedListener.ExitMatchWhereClause(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICypherVisitor<TResult> typedVisitor = visitor as ICypherVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMatchWhereClause(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MatchWhereClauseContext matchWhereClause() {
		MatchWhereClauseContext _localctx = new MatchWhereClauseContext(Context, State);
		EnterRule(_localctx, 4, RULE_matchWhereClause);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 101;
			matchClause();
			State = 103;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==WHERE) {
				{
				State = 102;
				whereClause();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MatchClauseContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode MATCH() { return GetToken(CypherParser.MATCH, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public PatternContext pattern() {
			return GetRuleContext<PatternContext>(0);
		}
		public MatchClauseContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_matchClause; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ICypherListener typedListener = listener as ICypherListener;
			if (typedListener != null) typedListener.EnterMatchClause(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ICypherListener typedListener = listener as ICypherListener;
			if (typedListener != null) typedListener.ExitMatchClause(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICypherVisitor<TResult> typedVisitor = visitor as ICypherVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMatchClause(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MatchClauseContext matchClause() {
		MatchClauseContext _localctx = new MatchClauseContext(Context, State);
		EnterRule(_localctx, 6, RULE_matchClause);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 105;
			Match(MATCH);
			State = 106;
			pattern();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class WhereClauseContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode WHERE() { return GetToken(CypherParser.WHERE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public WhereClauseContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_whereClause; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ICypherListener typedListener = listener as ICypherListener;
			if (typedListener != null) typedListener.EnterWhereClause(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ICypherListener typedListener = listener as ICypherListener;
			if (typedListener != null) typedListener.ExitWhereClause(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICypherVisitor<TResult> typedVisitor = visitor as ICypherVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitWhereClause(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public WhereClauseContext whereClause() {
		WhereClauseContext _localctx = new WhereClauseContext(Context, State);
		EnterRule(_localctx, 8, RULE_whereClause);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 108;
			Match(WHERE);
			State = 109;
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class WithClauseContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode WITH() { return GetToken(CypherParser.WITH, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ProjectionListContext projectionList() {
			return GetRuleContext<ProjectionListContext>(0);
		}
		public WithClauseContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_withClause; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ICypherListener typedListener = listener as ICypherListener;
			if (typedListener != null) typedListener.EnterWithClause(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ICypherListener typedListener = listener as ICypherListener;
			if (typedListener != null) typedListener.ExitWithClause(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICypherVisitor<TResult> typedVisitor = visitor as ICypherVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitWithClause(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public WithClauseContext withClause() {
		WithClauseContext _localctx = new WithClauseContext(Context, State);
		EnterRule(_localctx, 10, RULE_withClause);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 111;
			Match(WITH);
			State = 112;
			projectionList();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ReturnLimitClauseContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ReturnClauseContext returnClause() {
			return GetRuleContext<ReturnClauseContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public OrderingClauseContext orderingClause() {
			return GetRuleContext<OrderingClauseContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public LimitClauseContext limitClause() {
			return GetRuleContext<LimitClauseContext>(0);
		}
		public ReturnLimitClauseContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_returnLimitClause; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ICypherListener typedListener = listener as ICypherListener;
			if (typedListener != null) typedListener.EnterReturnLimitClause(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ICypherListener typedListener = listener as ICypherListener;
			if (typedListener != null) typedListener.ExitReturnLimitClause(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICypherVisitor<TResult> typedVisitor = visitor as ICypherVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitReturnLimitClause(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ReturnLimitClauseContext returnLimitClause() {
		ReturnLimitClauseContext _localctx = new ReturnLimitClauseContext(Context, State);
		EnterRule(_localctx, 12, RULE_returnLimitClause);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 114;
			returnClause();
			State = 116;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==ORDER_BY) {
				{
				State = 115;
				orderingClause();
				}
			}

			State = 119;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==LIMIT) {
				{
				State = 118;
				limitClause();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ReturnClauseContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RETURN() { return GetToken(CypherParser.RETURN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ProjectionListContext projectionList() {
			return GetRuleContext<ProjectionListContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DISTINCT() { return GetToken(CypherParser.DISTINCT, 0); }
		public ReturnClauseContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_returnClause; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ICypherListener typedListener = listener as ICypherListener;
			if (typedListener != null) typedListener.EnterReturnClause(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ICypherListener typedListener = listener as ICypherListener;
			if (typedListener != null) typedListener.ExitReturnClause(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICypherVisitor<TResult> typedVisitor = visitor as ICypherVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitReturnClause(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ReturnClauseContext returnClause() {
		ReturnClauseContext _localctx = new ReturnClauseContext(Context, State);
		EnterRule(_localctx, 14, RULE_returnClause);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 121;
			Match(RETURN);
			State = 123;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==DISTINCT) {
				{
				State = 122;
				Match(DISTINCT);
				}
			}

			State = 125;
			projectionList();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OrderingClauseContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ORDER_BY() { return GetToken(CypherParser.ORDER_BY, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public OrderByItemContext[] orderByItem() {
			return GetRuleContexts<OrderByItemContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public OrderByItemContext orderByItem(int i) {
			return GetRuleContext<OrderByItemContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] COMMA() { return GetTokens(CypherParser.COMMA); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMA(int i) {
			return GetToken(CypherParser.COMMA, i);
		}
		public OrderingClauseContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_orderingClause; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ICypherListener typedListener = listener as ICypherListener;
			if (typedListener != null) typedListener.EnterOrderingClause(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ICypherListener typedListener = listener as ICypherListener;
			if (typedListener != null) typedListener.ExitOrderingClause(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICypherVisitor<TResult> typedVisitor = visitor as ICypherVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOrderingClause(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public OrderingClauseContext orderingClause() {
		OrderingClauseContext _localctx = new OrderingClauseContext(Context, State);
		EnterRule(_localctx, 16, RULE_orderingClause);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 127;
			Match(ORDER_BY);
			State = 128;
			orderByItem();
			State = 133;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==COMMA) {
				{
				{
				State = 129;
				Match(COMMA);
				State = 130;
				orderByItem();
				}
				}
				State = 135;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OrderByItemContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DESC() { return GetToken(CypherParser.DESC, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ASC() { return GetToken(CypherParser.ASC, 0); }
		public OrderByItemContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_orderByItem; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ICypherListener typedListener = listener as ICypherListener;
			if (typedListener != null) typedListener.EnterOrderByItem(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ICypherListener typedListener = listener as ICypherListener;
			if (typedListener != null) typedListener.ExitOrderByItem(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICypherVisitor<TResult> typedVisitor = visitor as ICypherVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOrderByItem(this);
			else return visitor.VisitChildren(this);
		}
	}
